--- a/PC/html/_new/orderSheet_member.html
+++ b/PC/html/_new/orderSheet_member.html
@@ -232,53 +232,30 @@
                                      <tr>
                                         <th>이름 <span class="star">*</span></th>
                                         <td>
-                                            <div class="input_wrap">
-                                                <input type="text" placeholder="" class="width_name">
-                                            </div>
+                                            홍길동
                                         </td>                                    
                                     </tr>
                                      <tr>
                                         <th>휴대전화 <span class="star">*</span></th>
                                         <td>                                         
-                                            <div class="choice_wrap type_squre have_inner_txt inner_float">
-                                                <span class="input_wrap">
-                                                    <select name="" id="" class="width_phone">
-                                                        <option value="">선택</option>
-                                                    </select>
-                                                </span>  
-                                                <span class="input_wrap">
-                                                    <input type="text" placeholder="" class="width_phone">
-                                                </span>
-                                                <span class="input_wrap">
-                                                    <input type="text" placeholder="" class="width_phone">
-                                                </span>                                               
-                                            </div>
+                                            010-1234-5678
                                         </td>                                    
-                                    </t
-                                    r>
+                                    </tr>
                                     <tr>
                                         <th>이메일<span class="star">*</span></th>
                                         <td>
-                                            <div class="choice_wrap type_squre have_inner_txt inner_float_dot">                                                  
-                                                <span class="input_wrap">
-                                                    <input type="text" placeholder="" class="width_email">
+                                            <div>
+                                                <span>
+                                                    hottracks@ottracks.co.kr
                                                 </span>
-                                                <span class="input_wrap">@</span>
-                                                <span class="input_wrap">
-                                                    <input type="text" placeholder="" class="width_email">
-                                                </span> 
-                                                <span class="input_wrap 
-                                                ">
-                                                    <select name="" id="" class="width_email">
-                                                        <option value="">직접입력</option>
-                                                    </select>
-                                                </span>                                              
+                                                <a href="javascript:;" onclick="openCouponPopup();" class="icon_arrow">쿠폰 변경</a>
+                                                
                                             </div>
+
                                         </td>                                    
                                     </tr>
                                     <tr>
                                         <th>SMS수신 <span class="star">*</span></th>
-
                                         <td>
                                             <div class="choice_wrap">
                                                 <span class="choice_wrap_inner">
