--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -847,25 +847,37 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R6" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">7</div></th>
         <td class="s14"></td>
-        <td class="s16" rowspan="2">주문서 작성 (주문결제)</td>
-        <td class="s10">비회원</td>
+        <td class="s16" rowspan="3">주문서 작성 (주문결제)</td>
+        <td class="s16">비회원</td>
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/_new/orderSheet.html">./html/_new/orderSheet.html</a></td>
-        <td class="s19" dir="ltr">ing</td>
+        <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
         <th id="2024277320R7" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">8</div></th>
         <td class="s14"></td>
-        <td class="s10">회원</td>
+        <td class="s16">회원</td>
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/_new/orderSheet_member.html">./html/_new/orderSheet_member.html</a></td>
-        <td class="s19" dir="ltr">ing</td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"> 예치금, 안심번호 안내, 쿠폰변경 팝업</td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R7" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">8</div></th>
+        <td class="s14"></td>
+        <td class="s16">쿠폰조회 팝업</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/_new/popupCouponList.html">./html/_new/popupCouponList.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
       </tr>
