--- a/MOBILE/path_now.html
+++ b/MOBILE/path_now.html
@@ -832,7 +832,7 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">5</div></th>
         <td class="s14"></td>
-        <td class="s15" dir="ltr" rowspan="7">#Order<br>
+        <td class="s15" dir="ltr" rowspan="8">#Order<br>
           (주문/결제)</td>
         <td class="s16" rowspan="2">장바구니</td>
         <td class="s16" dir="ltr">장바구니 담았을 때</td>
@@ -859,7 +859,7 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R6" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">7</div></th>
         <td class="s14"></td>
-        <td class="s16" rowspan="3">주문서 작성 (주문결제)</td>
+        <td class="s16" rowspan="4">주문서 작성 (주문결제)</td>
         <td class="s16">비회원</td>
         <td class="s10"></td>
         <td class="s16"></td>
@@ -890,6 +890,18 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderSheet_detail.html">./html/new/orderSheet_detail.html</a></td>
         <td class="s19" dir="ltr"></td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style="height:29px;">
+        <th id="2024277320R7" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">8</div></th>
+        <td class="s14"></td>
+        <td class="s16">쿠폰조회 팝업</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/popup_coupon_list.html">./html/new/popup_coupon_list.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
       </tr>
