--- a/MOBILE/html/new/orderComplete.html
+++ b/MOBILE/html/new/orderComplete.html
@@ -36,7 +36,7 @@
 </style>
 </head>
 <body>
-<div id="wrap" class="content_new orderandpay">
+<div id="wrap" class="content_new">
 <!-- #header -->
   <div id="header">
     <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
@@ -48,8 +48,9 @@
     </div>
   </div>
 <!-- //#header -->
-    <!-- #content -->
-    <div id="content">
+     <!-- 201222 S : 작업부분 id="content" class="orderandpay" 넣어주세요-->
+  <!-- #content -->
+  <div id="content" class="orderandpay">
         
 	<div class="w_top lineb_da">
 		<h2 class="tit_h2">주문완료</h2>
