--- a/MOBILE/html/new/popup_coupon_list.html
+++ b/MOBILE/html/new/popup_coupon_list.html
@@ -47,7 +47,7 @@
 	</style>
 
 
-
+    <!-- 201222 S : 작업부분 id="content" class="orderandpay" 넣어주세요-->
 	<!-- content -->
 	<div id="content" class="orderandpay">
 
@@ -158,6 +158,7 @@
 		
 	</div>
 	<!--// content -->
+	<!--// 201222 E : 작업부분 -->
 
 	
 	<!-- app bar -->
@@ -177,6 +178,5 @@
 		});
 	</script>
 </div>
-<!--// 201222 E : id="wrap 에 class="search_modi" 넣어주세요 -->
 </body>
 </html>
