--- a/MOBILE/html/new/search_view.html
+++ b/MOBILE/html/new/search_view.html
@@ -59,314 +59,305 @@
 		<a href="#none" class="btn_search"><span>검색</span></a>
 	</div>
 	
-		<div class="search_wrap">
-			<div class="search_view">
-				<div class="top_tag">
-					<div class="swiper-container">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide"><a href="#none">보냉텀블러</a></div>
-							<div class="swiper-slide"><a href="#none">스텐텀블러</a></div>
-							<div class="swiper-slide"><a href="#none">아이스텀블러</a></div>
-							<div class="swiper-slide"><a href="#none">테이크아웃텀블러</a></div>
-							<div class="swiper-slide"><a href="#none">보냉텀블러</a></div>
-							<div class="swiper-slide"><a href="#none">스텐텀블러</a></div>
-							<div class="swiper-slide"><a href="#none">아이스텀블러</a></div>
-						</div>
-					</div>
-				</div>
-				<div class="cont01">
-					<div class="swiper-container">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<a href="#none">
-									<div class="thum">
-										<img src="../../images/biz/thums/img_taste02.png" alt="">
-									</div>
-									<div class="desc">
-										<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-										<p class="price font_t">16,000<span class="percent">20%</span></p>
-									</div>
-								</a>
-							</div>
-							<div class="swiper-slide">
-								<a href="#none">
-									<div class="thum">
-										<img src="../../images/biz/thums/img_taste03.png" alt="">
-									</div>
-									<div class="desc">
-										<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-										<p class="price font_t">16,000<span class="percent">20%</span></p>
-									</div>
-								</a>
-							</div>
-							<div class="swiper-slide">
-								<a href="#none">
-									<div class="thum">
-										<img src="../../images/biz/thums/img_taste04.png" alt="">
-									</div>
-									<div class="desc">
-										<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-										<p class="price font_t">16,000<span class="percent">20%</span></p>
-									</div>
-								</a>
-							</div>
-							<div class="swiper-slide">
-								<a href="#none">
-									<div class="thum">
-										<img src="../../images/biz/thums/img_taste05.png" alt="">
-									</div>
-									<div class="desc">
-										<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-										<p class="price font_t">16,000<span class="percent">20%</span></p>
-									</div>
-								</a>
-							</div>
-						</div>
-
-						<!-- 스크롤바 -->
-						<div class="swiper-scrollbar"></div>
-					</div>
-				</div>
-				
-
-				<div class="category_wrap cont03">
-					<!-- <div class="pd_filter">
-						<div class="form_select">
-							<select class="resize_select">
-								<option>인기상품순</option>
-								<option>신상품순</option>
-								<option>높은할인률순</option>
-								<option>판매량순</option>
-							</select>
-						</div>
-					</div> -->
-
-					<!-- 제품 -->
-					<div class="search_tab">
-						<ul>
-							<li class="active"><a href="#none">문구/기프트<span class="font_t">(2,110)</span></a></li>
-							<li><a href="#none">음반<span class="font_t">(2,110)</span></a></li>
-						</ul>
-					</div>
-					<div class="pd_total">
-						<em class="font_t">2,110</em>건의 검색결과가 있습니다.
-
-						<div class="sort_filter_box">
-							<div class="sort_filter">
-								<select name="" id="">
-									<option value="">인기순</option>
-									<option value="">신상품순</option>
-									<option value="">낮은가격순</option>
-									<option value="">높은가격순</option>
-									<option value="">할인율순</option>
-									<option value="">좋아요인기순</option>
-									<option value="">리뷰많은순</option>
-								</select>
-								<select name="" id="">
-									<option value="">40개씩</option>
-									<option value="">80개씩</option>
-									<option value="">120개씩</option>
-								</select>
-							</div>
-							<div class="filter_btn">
-								<a href="#none" class="btn_search_detail">필터</a>
-							</div>
-						</div>
-					</div>
-					<div class="pd_list">
-						<ul>
-							<li>
-								<a href="#none">
-									<div class="thum">
-										<img src="../../images/biz/thums/img_main25.png" alt="">
-									</div>
-								</a>
-								<!-- 클릭시 active : class 추가 -->
-								<a href="#none" class="btn_like active"><span>좋아요</span></a>
-								<a href="#none">
-									<div class="cont">
-										<p class="brand">wearinggeul</p>
-										<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-										<p class="price font_t">
-											<span class="percent">20%</span>
-											<span>999,999</span>
-											<span class="discount">999,999</span>
-										</p>
-										<div class="info">
-											<span class="reply">999+</span>
-											<span class="like">999+</span>
-										</div>
-										<div class="badge">
-											<span class="badge01">쿠폰</span>
-											<span class="badge02">사은품</span>
-											<span class="badge02">무료배송</span>
-										</div>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="#none">
-									<div class="thum">
-										<img src="../../images/biz/thums/img_main22.png" alt="">
-									</div>
-								</a>
-								<!-- 클릭시 active : class 추가 -->
-								<a href="#none" class="btn_like"><span>좋아요</span></a>
-								<a href="#none">
-									<div class="cont">
-										<p class="brand">wearinggeul</p>
-										<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-										<p class="price font_t">
-											<span class="percent">20%</span>
-											<span>999,999</span>
-											<span class="discount">999,999</span>
-										</p>
-										<div class="info">
-											<span class="reply">999+</span>
-											<span class="like">999+</span>
-										</div>
-										<div class="badge">
-											<span class="badge01">쿠폰</span>
-											<span class="badge02">사은품</span>
-											<span class="badge02">무료배송</span>
-										</div>
-									</div>
-								</a>
-							</li>
-							<!-- 품절시 sold_out : class 추가 -->
-							<li class="sold_out">
-								<a href="#none">
-									<div class="thum">
-										<img src="../../images/biz/thums/img_main21.png" alt="">
-									</div>
-								</a>
-								<!-- 클릭시 active : class 추가 -->
-								<a href="#none" class="btn_like"><span>좋아요</span></a>
-								<a href="#none">
-									<div class="cont">
-										<p class="brand">wearinggeul</p>
-										<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-										<p class="price font_t">
-											<span class="percent">20%</span>
-											<span>999,999</span>
-											<span class="discount">999,999</span>
-										</p>
-										<div class="info">
-											<span class="reply">999+</span>
-											<span class="like">999+</span>
-										</div>
-										<div class="badge">
-											<span class="badge03">품절</span>
-										</div>
-									</div>
-								</a>
-							</li>
-							<!-- 품절시 sold_out : class 추가 -->
-							<li class="sold_out">
-								<a href="#none">
-									<div class="thum">
-										<img src="../../images/biz/thums/img_main20.png" alt="">
-									</div>
-								</a>
-								<!-- 클릭시 active : class 추가 -->
-								<a href="#none" class="btn_like"><span>좋아요</span></a>
-								<a href="#none">
-									<div class="cont">
-										<p class="brand">wearinggeul</p>
-										<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-										<p class="price font_t">
-											<span class="percent">20%</span>
-											<span>999,999</span>
-											<span class="discount">999,999</span>
-										</p>
-										<div class="info">
-											<span class="reply">999+</span>
-											<span class="like">999+</span>
-										</div>
-										<div class="badge">
-											<span class="badge03">품절</span>
-										</div>
-									</div>
-								</a>
-							</li>
-						</ul>
-					</div>
-					<!--// 제품 -->
-
-					<div class="pagination_v2">
-						<a href="#none" class="arr prev first"></a>
-						<a href="#none" class="active">1</a>
-						<a href="#none">2</a>
-						<a href="#none">3</a>
-						<a href="#none">4</a>
-						<a href="#none">5</a>
-						<a href="#none" class="arr next"></a>
-					</div>
-				</div>
-
-				<div class="cont02 case2 space_type1">
-					<div class="event_banner"><!-- 이미지가 1개인 경우 -->
-						<ul>
-							<li>
-								<a href="#none">
-									<span class="badge badge01">관련이벤트</span>
-									<div class="img_wrap">
-										<img src="../../images/biz/thums/main_banner02.png" alt="">
-									</div>
-									<span class="font_t percent">10%</span>
-									<strong>아날로그 갬수성</strong>
-									<p>코닥~하고 찰칵 찍어요!</p>
-								</a>
-							</li>
-						</ul>
-					</div>
-					<div class="swiper-container">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<a href="#none">
-									<!-- <span class="badge badge01">관련이벤트</span> -->
-									<div class="thum">
-										<img src="../../images/biz/thums/event_banner01.png" alt="">
-									</div>
-									<span class="font_t percent">10%</span>
-									<strong>아날로그 갬수성</strong>
-									<p>코닥~하고 찰칵 찍어요!</p>
-								</a>
-							</div>
-							<div class="swiper-slide">
-								<a href="#none">
-									<!-- <span class="badge badge02">인기이벤트</span> -->
-									<div class="thum">
-										<img src="../../images/biz/thums/event_banner01.png" alt="">
-									</div>
-									<span class="font_t percent">10%</span>
-									<strong>아날로그 갬수성</strong>
-									<p>코닥~하고 찰칵 찍어요!</p>
-								</a>
-							</div>
-							<div class="swiper-slide">
-								<a href="#none">
-									<div class="thum">
-										<img src="../../images/biz/thums/event_banner01.png" alt="">
-									</div>
-									<span class="font_t percent">10%</span>
-									<strong>아날로그 갬수성</strong>
-									<p>코닥~하고 찰칵 찍어요!</p>
-								</a>
-							</div>
-						</div>
-
-						<!-- 스크롤바 -->
-						<div class="swiper-scrollbar"></div>
-
-						<!-- swiper-pagination -->
-						<!-- <div class="pagination_wrap">
-							<div class="swiper-pagination"></div>
-						</div> -->
+	<div class="search_wrap">
+		<div class="search_view">
+			<div class="top_tag">
+				<div class="swiper-container">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide"><a href="#none">보냉텀블러</a></div>
+						<div class="swiper-slide"><a href="#none">스텐텀블러</a></div>
+						<div class="swiper-slide"><a href="#none">아이스텀블러</a></div>
+						<div class="swiper-slide"><a href="#none">테이크아웃텀블러</a></div>
+						<div class="swiper-slide"><a href="#none">보냉텀블러</a></div>
+						<div class="swiper-slide"><a href="#none">스텐텀블러</a></div>
+						<div class="swiper-slide"><a href="#none">아이스텀블러</a></div>
 					</div>
 				</div>
 			</div>
+			<div class="cont01">
+				<div class="swiper-container">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<a href="#none">
+								<div class="thum">
+									<img src="../../images/biz/thums/img_taste02.png" alt="">
+								</div>
+								<div class="desc">
+									<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
+									<p class="price font_t">16,000<span class="percent">20%</span></p>
+								</div>
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="#none">
+								<div class="thum">
+									<img src="../../images/biz/thums/img_taste03.png" alt="">
+								</div>
+								<div class="desc">
+									<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
+									<p class="price font_t">16,000<span class="percent">20%</span></p>
+								</div>
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="#none">
+								<div class="thum">
+									<img src="../../images/biz/thums/img_taste04.png" alt="">
+								</div>
+								<div class="desc">
+									<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
+									<p class="price font_t">16,000<span class="percent">20%</span></p>
+								</div>
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="#none">
+								<div class="thum">
+									<img src="../../images/biz/thums/img_taste05.png" alt="">
+								</div>
+								<div class="desc">
+									<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
+									<p class="price font_t">16,000<span class="percent">20%</span></p>
+								</div>
+							</a>
+						</div>
+					</div>
+
+					<!-- 스크롤바 -->
+					<div class="swiper-scrollbar"></div>
+				</div>
+			</div>
+			
+
+			<div class="category_wrap cont03">
+				<!-- 제품 -->
+				<div class="search_tab">
+					<ul>
+						<li class="active"><a href="#none">문구/기프트<span class="font_t">(2,110)</span></a></li>
+						<li><a href="#none">음반<span class="font_t">(2,110)</span></a></li>
+					</ul>
+				</div>
+				<!-- 201222 S : 작업부분 -->
+				<div class="pd_total">
+					<em class="font_t">2,110</em>건
+
+					<div class="sort_filter_box">
+						<div class="sort_filter">
+							<select name="" id="">
+								<option value="">인기순</option>
+								<option value="">신상품순</option>
+								<option value="">낮은가격순</option>
+								<option value="">높은가격순</option>
+								<option value="">할인율순</option>
+								<option value="">좋아요인기순</option>
+								<option value="">리뷰많은순</option>
+							</select>
+							<select name="" id="">
+								<option value="">40개씩</option>
+								<option value="">80개씩</option>
+								<option value="">120개씩</option>
+							</select>
+						</div>
+						<div class="filter_btn">
+							<a href="#none" class="btn_search_detail">필터</a>
+						</div>
+					</div>
+				</div>
+				<!--// 201222 E : 작업부분 -->
+				<div class="pd_list">
+					<ul>
+						<li>
+							<a href="#none">
+								<div class="thum">
+									<img src="../../images/biz/thums/img_main25.png" alt="">
+								</div>
+							</a>
+							<!-- 클릭시 active : class 추가 -->
+							<a href="#none" class="btn_like active"><span>좋아요</span></a>
+							<a href="#none">
+								<div class="cont">
+									<p class="brand">wearinggeul</p>
+									<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
+									<p class="price font_t">
+										<span class="percent">20%</span>
+										<span>999,999</span>
+										<span class="discount">999,999</span>
+									</p>
+									<div class="info">
+										<span class="reply">999+</span>
+										<span class="like">999+</span>
+									</div>
+									<div class="badge">
+										<span class="badge01">쿠폰</span>
+										<span class="badge02">사은품</span>
+										<span class="badge02">무료배송</span>
+									</div>
+								</div>
+							</a>
+						</li>
+						<li>
+							<a href="#none">
+								<div class="thum">
+									<img src="../../images/biz/thums/img_main22.png" alt="">
+								</div>
+							</a>
+							<!-- 클릭시 active : class 추가 -->
+							<a href="#none" class="btn_like"><span>좋아요</span></a>
+							<a href="#none">
+								<div class="cont">
+									<p class="brand">wearinggeul</p>
+									<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
+									<p class="price font_t">
+										<span class="percent">20%</span>
+										<span>999,999</span>
+										<span class="discount">999,999</span>
+									</p>
+									<div class="info">
+										<span class="reply">999+</span>
+										<span class="like">999+</span>
+									</div>
+									<div class="badge">
+										<span class="badge01">쿠폰</span>
+										<span class="badge02">사은품</span>
+										<span class="badge02">무료배송</span>
+									</div>
+								</div>
+							</a>
+						</li>
+						<!-- 품절시 sold_out : class 추가 -->
+						<li class="sold_out">
+							<a href="#none">
+								<div class="thum">
+									<img src="../../images/biz/thums/img_main21.png" alt="">
+								</div>
+							</a>
+							<!-- 클릭시 active : class 추가 -->
+							<a href="#none" class="btn_like"><span>좋아요</span></a>
+							<a href="#none">
+								<div class="cont">
+									<p class="brand">wearinggeul</p>
+									<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
+									<p class="price font_t">
+										<span class="percent">20%</span>
+										<span>999,999</span>
+										<span class="discount">999,999</span>
+									</p>
+									<div class="info">
+										<span class="reply">999+</span>
+										<span class="like">999+</span>
+									</div>
+									<div class="badge">
+										<span class="badge03">품절</span>
+									</div>
+								</div>
+							</a>
+						</li>
+						<!-- 품절시 sold_out : class 추가 -->
+						<li class="sold_out">
+							<a href="#none">
+								<div class="thum">
+									<img src="../../images/biz/thums/img_main20.png" alt="">
+								</div>
+							</a>
+							<!-- 클릭시 active : class 추가 -->
+							<a href="#none" class="btn_like"><span>좋아요</span></a>
+							<a href="#none">
+								<div class="cont">
+									<p class="brand">wearinggeul</p>
+									<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
+									<p class="price font_t">
+										<span class="percent">20%</span>
+										<span>999,999</span>
+										<span class="discount">999,999</span>
+									</p>
+									<div class="info">
+										<span class="reply">999+</span>
+										<span class="like">999+</span>
+									</div>
+									<div class="badge">
+										<span class="badge03">품절</span>
+									</div>
+								</div>
+							</a>
+						</li>
+					</ul>
+				</div>
+				<!--// 제품 -->
+
+				<div class="pagination_v2">
+					<a href="#none" class="arr prev first"></a>
+					<a href="#none" class="active">1</a>
+					<a href="#none">2</a>
+					<a href="#none">3</a>
+					<a href="#none">4</a>
+					<a href="#none">5</a>
+					<a href="#none" class="arr next"></a>
+				</div>
+			</div>
+
+			<div class="cont02 case2 space_type1">
+				<div class="event_banner"><!-- 이미지가 1개인 경우 -->
+					<ul>
+						<li>
+							<a href="#none">
+								<span class="badge badge01">관련이벤트</span>
+								<div class="img_wrap">
+									<img src="../../images/biz/thums/main_banner02.png" alt="">
+								</div>
+								<span class="font_t percent">10%</span>
+								<strong>아날로그 갬수성</strong>
+								<p>코닥~하고 찰칵 찍어요!</p>
+							</a>
+						</li>
+					</ul>
+				</div>
+				<div class="swiper-container">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<a href="#none">
+								<!-- <span class="badge badge01">관련이벤트</span> -->
+								<div class="thum">
+									<img src="../../images/biz/thums/event_banner01.png" alt="">
+								</div>
+								<span class="font_t percent">10%</span>
+								<strong>아날로그 갬수성</strong>
+								<p>코닥~하고 찰칵 찍어요!</p>
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="#none">
+								<!-- <span class="badge badge02">인기이벤트</span> -->
+								<div class="thum">
+									<img src="../../images/biz/thums/event_banner01.png" alt="">
+								</div>
+								<span class="font_t percent">10%</span>
+								<strong>아날로그 갬수성</strong>
+								<p>코닥~하고 찰칵 찍어요!</p>
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="#none">
+								<div class="thum">
+									<img src="../../images/biz/thums/event_banner01.png" alt="">
+								</div>
+								<span class="font_t percent">10%</span>
+								<strong>아날로그 갬수성</strong>
+								<p>코닥~하고 찰칵 찍어요!</p>
+							</a>
+						</div>
+					</div>
+
+					<!-- 스크롤바 -->
+					<div class="swiper-scrollbar"></div>
+
+					<!-- swiper-pagination -->
+					<!-- <div class="pagination_wrap">
+						<div class="swiper-pagination"></div>
+					</div> -->
+				</div>
+			</div>
 		</div>
+	</div>
 
 	<!-- content -->
 	<div id="content" class="mt0">
