--- a/PC/html/_new/cart_nodata.html
+++ b/PC/html/_new/cart_nodata.html
@@ -45,7 +45,7 @@ $(document).ready(function(){
 </script>
 </head>
 <body>
-<div id="wrap" class="content_new orderandpay">
+<div id="wrap" class="content_new ">
 
 <!-- header -->
 <div id="header">
@@ -138,15 +138,17 @@ $(document).ready(function(){
 		</div>
 	</nav>
 </div>
-<!--// header -->    
+<!--// header -->
+    <!-- 201222 : 작업부분 id="container" class="orderandpay" 넣어주세요  -->
     <!-- Container -->
-    <div id="container">   
+    <div id="container" class="orderandpay">   
         <!-- 컨텐츠 -->
         <div class="content" id="content">
             
 <!-- sub top -->
 <h2 class="tit">장바구니</h2>
 <!-- / sub top -->
+<!--// 201222 E : 작업부분 -->
 
 <div class="mgt20 c_both">
     <ul class="list_type02_v2 fs14">
