--- a/PC/html/_new/popupCouponList.html
+++ b/PC/html/_new/popupCouponList.html
@@ -26,6 +26,7 @@
 
 
 </head>
+<!-- 201222 S : 작업부분 body에 class="orderandpay" 넣어주세요  -->
 <body class="popup orderandpay ">
     <div>
         <div class="tooltip_wrap active">
@@ -167,4 +168,5 @@
 
 
 </body>
+<!--// 201222 E : 작업부분
 </html>
