--- a/PC/html/_new/search.html
+++ b/PC/html/_new/search.html
@@ -14,6 +14,7 @@
 <link rel="stylesheet" type="text/css" href="../../css/contents.css">
 <link rel="stylesheet" type="text/css" href="../../css/biz/common_v2.css">
 <link rel="stylesheet" type="text/css" href="../../css/biz/slick.css">
+<!-- 201222 작업부분  -->
 <link rel="stylesheet" type="text/css" href="../../css/_new/search_modi.css">
 
 <script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script>
@@ -1284,7 +1285,7 @@
 					</div>
 				</div>
 			</div>
-			<!--// 201222 E : 작업부분 id="content" 에 class="search_modi" 넣어주세요 -->
+			<!--// 201222 E : 작업부분 -->
 			<!-- //컨텐츠 -->
 		</div>
 		<!--// Container -->
