--- a/MOBILE/html/new/cart.html
+++ b/MOBILE/html/new/cart.html
@@ -62,6 +62,7 @@ jQuery(function($) {
         }
     }); 
 
+    // <!-- 201222 S : 작업부분 -->
     // 장바구니 카운트 
      $(".count .up").click(function(){
             $(this).parent().find("input[name='prdtCount']").val(Number($(this).parent().find("input[name='prdtCount']").val()) + 1)
@@ -75,6 +76,7 @@ jQuery(function($) {
             }
             $(this).parent().find("input[name='prdtCount']").val(Number($(this).parent().find("input[name='prdtCount']").val()) - 1)
         })   
+      //<!--// 201222 E : 작업부분 -->
 });
 </script>
 <style>
@@ -141,7 +143,7 @@ jQuery(function($) {
 </style>
 </head>
 <body class="">
-<div id="wrap" class="content_new orderandpay">
+<div id="wrap" class="content_new">
   <!-- #header -->
   <div id="header">
     <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
@@ -154,8 +156,9 @@ jQuery(function($) {
   </div>
   <!-- //#header -->
   
+ <!-- 201222 S : 작업부분 id="content" class="orderandpay" 넣어주세요-->
   <!-- #content -->
-  <div id="content">
+  <div id="content" class="orderandpay">
     <div class="w_top lineb_da">
       <h2 class="tit_h2">장바구니 8종 (8개)</h2>
       <p>로그인 시 장바구니는 <span class="col_black">14일</span> 동안 보관됩니다. <br/>
