--- a/MOBILE/html/new/cart_nodata.html
+++ b/MOBILE/html/new/cart_nodata.html
@@ -127,7 +127,7 @@ jQuery(function($) {
 </style>
 </head>
 <body class="">
-<div id="wrap" class="content_new orderandpay">
+<div id="wrap" class="content_new">
   <!-- #header -->
   <div id="header">
     <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
@@ -140,9 +140,9 @@ jQuery(function($) {
   </div>
   <!-- //#header -->
   
+   <!-- 201222 S : 작업부분 id="content" class="orderandpay" 넣어주세요-->
   <!-- #content -->
-  <div id="content">
-        
+  <div id="content" class="orderandpay">        
 	<div class="w_top lineb_da">
 		<h2 class="tit_h2">장바구니 0종 (0개)</h2>
 		<p>로그인 시 장바구니는 <span class="col_black">14일</span> 동안 보관됩니다.
