--- a/PC/html/_new/orderSheet_member.html
+++ b/PC/html/_new/orderSheet_member.html
@@ -109,14 +109,14 @@
             });
         });
 
-        // 안심번호, 예치금 툴팁 
-        $('.icon_question').each(function(){
+        // 안심번호, 예치금, 포인트 조회 툴팁 
+        $('.icon_question, .point_go').each(function(){
             $(this).click(function(){
                $(this).siblings('.tooltip_wrap').show();
 
             });
         });
-        $('.tooltip_close').each(function(){
+        $('.tooltip_close, .js_confirm').each(function(){
             $(this).click(function(){
                $(this).closest('.tooltip_wrap').hide();
             });
@@ -271,7 +271,7 @@
                                                 <span>
                                                     hottracks@ottracks.co.kr
                                                 </span>
-                                                <a href="javascript:;" onclick="openCouponPopup();" class="icon_arrow">회원정보수정</a>
+                                                <a href="javascript:;" class="icon_arrow">회원정보수정</a>
                                                 
                                             </div>
 
@@ -1031,7 +1031,80 @@
                                                 <span class="input_wrap">
                                                     <input type="text" placeholder="0 P" class="width_point">
                                                 </span>
-                                                <a href="javascript:;" class="btn_defalut squre">포인트 조회</a>                                                                                              
+                                                <a href="javascript:;" class="btn_defalut squre point_go">포인트 조회</a>
+                                                <div class="tooltip_wrap point_go_wrap">
+                                                    <div class="tooltip_inner">  
+                                                        <p class="tooltip_tit">GS&amp;POINT</p>
+                                                        <div class="tooltip_conts">
+                                                            <div class="tooltip_conts_inner">                                                            
+                                                                <table class="table_wrap type_1">
+                                                                    <colgroup>
+                                                                        <col width="100px">
+                                                                        <col width="*">
+                                                                    </colgroup>
+                                                                    <tbody>
+                                                                        <tr>
+                                                                            <th class="" scope="row"><label for="gsIdInput">GS 아이디</label></th>
+                                                                            <td class="">
+                                                                                <div class="input_wrap">
+                                                                                    <input type="text" id="gsIdInput" class="">
+                                                                                </div>
+                                                                            </td>
+                                                                        </tr>
+                                                                        <tr>
+                                                                            <th class="" scope="row"><label for="gsPwInput">비밀번호</label></th>
+                                                                            <td class="">
+                                                                                <div class="input_wrap">
+                                                                                    <input class="width_popup_point" type="password" name="gsPwInput">
+                                                                                </div>                                                                            
+                                                                                <button type="button"  class="btn_type01_v2">조회</button>
+                                                                            </td>
+                                                                        </tr>
+                                                                        <tr>
+                                                                            <th class="" scope="row">보유 포인트</th>
+                                                                            <td class="">
+                                                                                <span id="gsGetPoint" name="gsGetPoint">0 P</span>
+                                                                            </td>
+                                                                        </tr>
+                                                                        <tr>
+                                                                            <th class="" scope="row"><label for="gsPointUse">사용 포인트</label></th>
+                                                                            <td class="">
+                                                                               <div class="input_wrap">
+                                                                                    <input class="width_popup_point" type="text" name="gsPwInput">
+                                                                                </div> 
+                                                                            </td>
+                                                                        </tr>
+                                                                        <tr>
+                                                                            <td class=" no_line" colspan="2">                                           
+                                                                                <div class="choice_wrap type_squre have_inner_txt">
+                                                                                    <div class="choice_wrap_inner mgt5">
+                                                                                        <span>
+                                                                                            <input type="checkbox" name="orderInfo9" id="orderInfo_91" value="Y">
+                                                                                            <label for="orderInfo_91">GS&amp;POINT 적립 신청하기</label>
+                                                                                        </span>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </td>
+                                                                        </tr>
+                                                                    </tbody>
+                                                                </table>
+                                                                <ul class="point-info">
+                                                                    <li>- GS&amp;POINT는 1,000원 이상부터 10원 단위로 사용 가능합니다.</li>
+                                                                    <li>- GS&amp;POINT 사용, 적립을 위해 GS&amp;POINT 아이디와 비밀번호를 정확히 입력해주세요.</li>
+                                                                    <li>- GS&amp;POINT 비밀번호를 분실한 경우 'GS&amp;POINT 홈페이지 &gt; 비밀번호 찾기'에서 확인할 수 있습니다.</li>
+                                                                    <li class="point-site"><a href="#n">[GS&amp;POINT 홈페이지 바로가기]</a></li>
+                                                                </ul>
+                                                            </div>
+                                                            <div class="btn_wrap">
+                                                                <a href="#n" class="btn_type04_v1 js_confirm">
+                                                                    확인
+                                                                </a>
+                                                            </div>
+                                                            
+                                                        </div>
+                                                    </div>
+                                                    <a href="javascript:;" class="tooltip_close">닫기</a>
+                                                </div>                                                                                             
                                             </div>
                                         </td>                                    
                                     </tr>
