--- a/MOBILE/path_now.html
+++ b/MOBILE/path_now.html
@@ -803,6 +803,22 @@ th.row-headers-background {
         <td class="s12">NOTICE</td>
         <td class="s13"></td>
       </tr>
+
+      <tr style='height:29px;'>
+        <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
+       <td class="s14"></td>
+        <td class="s15" dir="ltr" colspan="9">
+        주석 <br>
+            201222 작업부분  <br>
+
+            201222 S : 작업부분 <br>
+            // 201222 E : 작업부분 <br></td>
+        </td>
+      </tr>
+        <tr>
+            <th class="row-headers-background"></th>
+            <td class="s11" colspan="12"></td>
+        </tr>
       <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
         <td class="s14" ></td>
@@ -865,7 +881,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderSheet.html">./html/new/orderSheet.html</a></td>
-        <td class="s19" dir="ltr"></td>
+        <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
       </tr>
@@ -877,8 +893,8 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderSheet_member.html">./html/new/orderSheet_member.html</a></td>
-        <td class="s19" dir="ltr"></td>
-        <td class="s16"></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16">안심번호사용안내, 포인트조회, 예치금 팝업 </td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -889,7 +905,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderSheet_detail.html">./html/new/orderSheet_detail.html</a></td>
-        <td class="s19" dir="ltr"></td>
+        <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
       </tr>
