--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -805,6 +805,21 @@ th.row-headers-background {
       </tr>
       <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
+       <td class="s14"></td>
+        <td class="s15" dir="ltr" colspan="9">
+        주석 <br>
+            201222 작업부분  <br>
+
+            201222 S : 작업부분 <br>
+            // 201222 E : 작업부분 <br></td>
+        </td>
+      </tr>
+        <tr>
+            <th class="row-headers-background"></th>
+            <td class="s11" colspan="12"></td>
+        </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
         <td class="s14"></td>
         <td class="s15" dir="ltr">검색결과</td>
         <td class="s16"></td>
